# clawdesk

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.e2e  Dockerfile.test  LICENSE  _team_orchestration_new.rs  clippy.toml  docker-compose.yml  readme.md  run-tauri.sh  rust-toolchain.toml  usecase.md
crates/clawdesk-acp/: Cargo.toml
crates/clawdesk-acp/src/: agent_card.rs  agent_descriptor.rs  announce.rs  capability.rs  capability_algebra.rs  content_router.rs  contract.rs  delta_stream.rs  discovery.rs  durable_announce.rs  error.rs  heartbeat.rs  lib.rs  message.rs  policy.rs  router.rs  server.rs  session_router.rs  skill_wiring.rs  streaming.rs  task.rs  thread_agent.rs
crates/clawdesk-acp/tests/: integration_tests.rs  property_tests.rs
crates/clawdesk-adapters/: Cargo.toml
crates/clawdesk-adapters/src/: circuit_breaker.rs  health_monitor.rs  integration.rs  lib.rs  oauth.rs  rate_limit.rs  schema_migration.rs  service.rs  social.rs
crates/clawdesk-agent-config/: Cargo.toml
crates/clawdesk-agent-config/src/: error.rs  lib.rs  loader.rs  registry.rs  schema.rs  watcher.rs
crates/clawdesk-agent-config/tests/: snapshot_tests.rs
crates/clawdesk-agents/: Cargo.toml
crates/clawdesk-agents/src/: a2ui.rs  agent_backend_bridge.rs  agent_event_stream.rs  agent_message.rs  agent_registry.rs  aop_verifier.rs  auto_compose.rs  bootstrap.rs  browser_tools.rs  btw.rs  builtin_tools.rs  canvas_tools.rs  causal_trace.rs  cli_orchestration.rs  cli_provider.rs  cli_runner.rs  cognitive_loop.rs  coherence.rs  compaction.rs  context.rs  context_budget.rs  context_transform.rs  context_window.rs  crdt.rs  discord_tools.rs  dynamic_orchestrator.rs  dynamic_prompt.rs  email_tool.rs  eval_loop.rs  exec_policy.rs  failover.rs  handoff_summarizer.rs  harness.rs  image_tool.rs  intent.rs  isolated_agent.rs  lib.rs  loop_guard.rs  loop_stages.rs  marketplace.rs  (+47 more)
crates/clawdesk-autoreply/: Cargo.toml
crates/clawdesk-autoreply/src/: block_stream.rs  chunking.rs  classifier.rs  command_auth.rs  command_registry.rs  debounce.rs  directive.rs  echo.rs  formatter.rs  lib.rs  media_directive.rs  pipeline.rs  router.rs
crates/clawdesk-bench/: Cargo.toml
crates/clawdesk-bench/src/: main.rs
crates/clawdesk-browser/: Cargo.toml
crates/clawdesk-browser/src/: action.rs  cdp.rs  dom_intel.rs  extension_relay.rs  file_ops.rs  headless.rs  lib.rs  manager.rs  page.rs  profile.rs  reliability.rs  route_dispatcher.rs  safety.rs  session_registry.rs  snapshot.rs  ssrf.rs  tabs.rs  tool_registry.rs
crates/clawdesk-browser/tests/: conformance.rs
crates/clawdesk-bus/: Cargo.toml
crates/clawdesk-bus/src/: adaptive_priority.rs  backpressure.rs  bridge.rs  config_events.rs  dispatch.rs  event.rs  inbound.rs  lib.rs  orchestrator_bridge.rs  priority.rs  skill_events.rs  subscription.rs  surface.rs  topic.rs  typed_event.rs  workflow.rs
crates/clawdesk-canvas/: Cargo.toml
crates/clawdesk-canvas/src/: a2ui.rs  capability.rs  commands.rs  device.rs  host.rs  lib.rs  node_commands.rs  node_coordinator.rs
crates/clawdesk-channel/: Cargo.toml
crates/clawdesk-channel-plugins/: Cargo.toml
crates/clawdesk-channel-plugins/src/: allowlist.rs  capability.rs  lib.rs  plugin.rs
crates/clawdesk-channel/src/: channel_bridge.rs  channel_dock.rs  health.rs  inbound_adapter.rs  interactive.rs  lib.rs  monitor.rs  progress_forwarder.rs  rate_limit.rs  registry.rs  reply_formatter.rs  session_bridge.rs
crates/clawdesk-channels/: Cargo.toml
crates/clawdesk-channels/src/: bluebubbles.rs  bridge_adapter.rs  discord.rs  email.rs  factory.rs  feishu.rs  googlechat.rs  imessage.rs  internal.rs  irc.rs  lib.rs  line.rs  markdown.rs  mastodon.rs  matrix.rs  mattermost.rs  msteams.rs  nextcloud_talk.rs  nostr.rs  retry_policy.rs  sidecar.rs  signal.rs  slack.rs  teams.rs  telegram.rs  tlon.rs  twitch.rs  webchat.rs  webhook.rs  whatsapp.rs  whatsapp_storage.rs  zalo.rs  zalouser.rs
crates/clawdesk-cli/: Cargo.toml
crates/clawdesk-cli/src/: agent_compose.rs  cli_approval.rs  completions.rs  config_backup.rs  doctor.rs  gateway_rpc.rs  local_agent.rs  main.rs  onboard.rs  permission_modes.rs  pipeline_run.rs  policy_audit.rs  security_audit.rs  self_update.rs  skill_author.rs  skill_cli.rs  skill_registry.rs  tmux.rs  tmux_onboard.rs
crates/clawdesk-conscious/: Cargo.toml
crates/clawdesk-conscious/src/: agent_selector.rs  awareness.rs  deliberation.rs  gateway.rs  homeostasis.rs  lib.rs  sentinel.rs  trace.rs  veto.rs  workspace.rs
crates/clawdesk-consensus/: Cargo.toml
crates/clawdesk-consensus/src/: lib.rs  pbft.rs  voting.rs
crates/clawdesk-core/: Cargo.toml
crates/clawdesk-core/src/: chat.rs  event.rs  lib.rs  project.rs  service.rs
crates/clawdesk-cron/: Cargo.toml
crates/clawdesk-cron/src/: dep_resolver.rs  executor.rs  heartbeat.rs  heartbeat_schedule.rs  lib.rs  manager.rs  notification_queue.rs  parser.rs  persistence.rs  proactive.rs  webhook.rs
crates/clawdesk-curiosity/: Cargo.toml
crates/clawdesk-curiosity/src/: budget.rs  engine.rs  gaps.rs  idle.rs  lib.rs
crates/clawdesk-daemon/: Cargo.toml
crates/clawdesk-daemon/src/: health.rs  lib.rs  pid.rs  platform.rs  runner.rs  sleep_wake.rs
crates/clawdesk-discovery/: Cargo.toml
crates/clawdesk-discovery/src/: federation.rs  lib.rs  mdns.rs  pairing.rs  registry.rs
crates/clawdesk-domain/: Cargo.toml
crates/clawdesk-domain/src/: approval.rs  auth.rs  compaction.rs  contacts.rs  context_guard.rs  digest.rs  fallback.rs  identity.rs  lib.rs  lineage.rs  migration.rs  model_catalog.rs  policy_dsl.rs  (+8 more)
crates/clawdesk-extensions/: Cargo.toml
crates/clawdesk-gateway/: Cargo.toml
crates/clawdesk-infra/: Cargo.toml
crates/clawdesk-installer/: Cargo.toml
crates/clawdesk-local-models/: Cargo.toml
crates/clawdesk-mcp/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cosine_similarity.rs  injection_scanner.rs  json_rpc.rs  token_estimator.rs  toml_agent_config.rs
xtask/: Cargo.toml
xtask/src/: dep_lint.rs  main.rs  quality_gate.rs  release_check.rs
(+783 files in other folders)
