[workspace]
members = [
    "crates/clawdesk-types",
    "crates/clawdesk-storage",
    "crates/clawdesk-domain",
    "crates/clawdesk-sochdb",
    "crates/clawdesk-channel",
    "crates/clawdesk-channels",
    "crates/clawdesk-agents",
    "crates/clawdesk-providers",
    "crates/clawdesk-gateway",
    "crates/clawdesk-cli",
    "crates/clawdesk-tauri",
    "crates/clawdesk-plugin",
    "crates/clawdesk-memory",
    "crates/clawdesk-security",
    "crates/clawdesk-cron",
    "crates/clawdesk-media",
    "crates/clawdesk-autoreply",
    "crates/clawdesk-infra",
    "crates/clawdesk-skills",
    "crates/clawdesk-acp",
    "crates/clawdesk-tunnel",
    "crates/clawdesk-observability",
    "crates/clawdesk-telemetry",
    "crates/clawdesk-runtime",
    "crates/clawdesk-tui",
    "crates/clawdesk-browser",
    "crates/clawdesk-discovery",
    "crates/clawdesk-bus",
    "crates/clawdesk-adapters",
    "crates/clawdesk-threads",
    "crates/clawdesk-bench",
    "crates/clawdesk-sandbox",
    "crates/clawdesk-mcp",
    "crates/clawdesk-extensions",
    "crates/clawdesk-migrate",
    "crates/clawdesk-simd",
    "crates/clawdesk-canvas",
    "crates/clawdesk-planner",
    "crates/clawdesk-consensus",
    "crates/clawdesk-daemon",
    "crates/clawdesk-test",
    "crates/clawdesk-local-models",
    "crates/clawdesk-rag",
]
resolver = "2"

# =============================================================================
# ClawDesk — Multi-Channel AI Agent Gateway
# =============================================================================
#
# Architecture: Hexagonal (ports-and-adapters)
# Storage: SochDB embedded ACID vector database
# Target: Tauri 2.0 cross-platform desktop + CLI
#
# Crate dependency graph (critical path depth = 6):
#
#   clawdesk-types (zero deps)
#       ↑
#   clawdesk-storage (trait defs only)
#       ↑              ↑
#   clawdesk-domain    clawdesk-sochdb
#       ↑                  ↑
#   clawdesk-channel   clawdesk-agents   clawdesk-skills
#       ↑                  ↑                  ↑
#   clawdesk-channels  clawdesk-providers    |
#       ↑                  ↑                  |
#       ├──────────────────┘                  |
#       ↑                                     |
#   clawdesk-gateway ─────────────────────────┘
#       ↑                  ↑
#   clawdesk-acp           |
#       ↑                  |
#   clawdesk-cli / clawdesk-tauri (leaf binaries)
#
# =============================================================================

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sushanth"]
license = "MIT"
repository = "https://github.com/clawdesk/clawdesk"
rust-version = "1.75"

[workspace.dependencies]
# --- Internal crates ---
clawdesk-types = { path = "crates/clawdesk-types" }
clawdesk-storage = { path = "crates/clawdesk-storage" }
clawdesk-domain = { path = "crates/clawdesk-domain" }
clawdesk-sochdb = { path = "crates/clawdesk-sochdb" }
clawdesk-channel = { path = "crates/clawdesk-channel" }
clawdesk-channels = { path = "crates/clawdesk-channels" }
clawdesk-agents = { path = "crates/clawdesk-agents" }
clawdesk-providers = { path = "crates/clawdesk-providers" }
clawdesk-gateway = { path = "crates/clawdesk-gateway" }
clawdesk-plugin = { path = "crates/clawdesk-plugin" }
clawdesk-memory = { path = "crates/clawdesk-memory" }
clawdesk-security = { path = "crates/clawdesk-security" }
clawdesk-cron = { path = "crates/clawdesk-cron" }
clawdesk-media = { path = "crates/clawdesk-media" }
clawdesk-autoreply = { path = "crates/clawdesk-autoreply" }
clawdesk-infra = { path = "crates/clawdesk-infra" }
clawdesk-skills = { path = "crates/clawdesk-skills" }
clawdesk-acp = { path = "crates/clawdesk-acp" }
clawdesk-tunnel = { path = "crates/clawdesk-tunnel" }
clawdesk-observability = { path = "crates/clawdesk-observability" }
clawdesk-telemetry = { path = "crates/clawdesk-telemetry" }
clawdesk-runtime = { path = "crates/clawdesk-runtime" }
clawdesk-tui = { path = "crates/clawdesk-tui" }
clawdesk-browser = { path = "crates/clawdesk-browser" }
clawdesk-discovery = { path = "crates/clawdesk-discovery" }
clawdesk-bus = { path = "crates/clawdesk-bus" }
clawdesk-adapters = { path = "crates/clawdesk-adapters" }
clawdesk-threads = { path = "crates/clawdesk-threads" }
clawdesk-sandbox = { path = "crates/clawdesk-sandbox" }
clawdesk-mcp = { path = "crates/clawdesk-mcp" }
clawdesk-extensions = { path = "crates/clawdesk-extensions" }
clawdesk-migrate = { path = "crates/clawdesk-migrate" }
clawdesk-simd = { path = "crates/clawdesk-simd" }
clawdesk-canvas = { path = "crates/clawdesk-canvas" }
clawdesk-planner = { path = "crates/clawdesk-planner" }
clawdesk-consensus = { path = "crates/clawdesk-consensus" }
clawdesk-daemon = { path = "crates/clawdesk-daemon" }
clawdesk-test = { path = "crates/clawdesk-test" }
clawdesk-local-models = { path = "crates/clawdesk-local-models" }
clawdesk-rag = { path = "crates/clawdesk-rag" }

# --- SochDB (embedded ACID vector database) ---
sochdb = { version = "0.5.0", features = ["embedded"] }
sochdb-core = { version = "0.5.0" }
sochdb-storage = { version = "0.5.0" }
sochdb-index = { version = "0.5.0" }
sochdb-query = { version = "0.5.0" }

# --- Async runtime ---
# Library crates get minimal features; leaf binaries (cli, tauri, bench) add "full".
tokio = { version = "1", features = ["macros", "sync", "time", "rt"] }
tokio-util = { version = "0.7" }

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# --- HTTP / WebSocket ---
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "stream"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# --- Error handling ---
thiserror = "2"
anyhow = "1"

# --- Observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.25"

# --- OpenTelemetry ---
opentelemetry = { version = "0.24", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.24", features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic", "trace", "metrics"] }
opentelemetry-semantic-conventions = "0.16"
opentelemetry-http = "0.13"

# --- CLI ---
clap = { version = "4", features = ["derive"] }

# --- Time ---
chrono = { version = "0.4", features = ["serde"] }

# --- Cryptography ---
ed25519-dalek = { version = "2", features = ["std"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# --- Text search ---
aho-corasick = "1"
regex = "1"

# --- Credential encryption ---
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"

# --- Directory walking ---
walkdir = "2"

# --- Utilities ---
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
tower = "0.5"
base64 = "0.22"
arc-swap = "1"
rustc-hash = "2"
toml = "0.8"
im = "15"
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.16"

# --- iMessage / IRC / WhatsApp storage ---
rusqlite = { version = "0.32", features = ["bundled"] }
directories = "5"
tokio-rustls = "0.26"
webpki-roots = "0.26"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
