[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false
description = "Build automation tasks for the ClawDesk workspace"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
