[package]
name = "clawdesk-acp"
description = "Agent-to-Agent protocol (A2A/ACP) — discovery, task delegation, and inter-agent communication"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clawdesk-types = { workspace = true }
clawdesk-agents = { workspace = true }
clawdesk-providers = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
aho-corasick = { workspace = true }

[dev-dependencies]
proptest = "1"
