[package]
name = "clawdesk-agent-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Declarative agent configuration via TOML for ClawDesk"

[dependencies]
clawdesk-types = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
notify = "7"
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
