[package]
name = "clawdesk-agents"
description = "Agent runner with structured concurrency for ClawDesk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clawdesk-types = { workspace = true }
clawdesk-storage = { workspace = true }
clawdesk-domain = { workspace = true }
clawdesk-providers = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
aho-corasick = { workspace = true }
