[package]
name = "clawdesk-agents"
description = "Agent runner with structured concurrency for ClawDesk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clawdesk-types = { workspace = true }
clawdesk-storage = { workspace = true }
clawdesk-domain = { workspace = true }
clawdesk-providers = { workspace = true }
clawdesk-plugin = { workspace = true }
clawdesk-browser = { workspace = true }
clawdesk-canvas = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "io-util"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
aho-corasick = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
dashmap = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"