[package]
name = "clawdesk-bench"
description = "Memory benchmark bridge — JSON-line protocol for Python FFI benchmarking"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "clawdesk-bench"
path = "src/main.rs"

[dependencies]
clawdesk-memory = { workspace = true }
clawdesk-sochdb = { workspace = true }
clawdesk-storage = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
