[package]
name = "clawdesk-browser"
description = "Browser automation — Chrome DevTools Protocol (CDP) client for web interaction"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clawdesk-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
