[package]
name = "clawdesk-canvas"
description = "Canvas host + A2UI agent-to-UI protocol for ClawDesk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clawdesk-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "net", "sync", "time", "io-util", "rt"] }
tracing = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "fs"] }
async-trait = { workspace = true }
reqwest = { workspace = true }
hostname = "0.4"
num_cpus = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
