[package]
name = "clawdesk-channel-plugins"
description = "Channel plugin architecture — self-registration, capability matrices, per-channel hooks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clawdesk-types = { workspace = true }
clawdesk-channel = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
