[package]
name = "clawdesk-channels"
description = "Concrete channel implementations — Telegram, Discord, WebChat, and more"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clawdesk-types = { workspace = true }
clawdesk-channel = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
directories = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
