[package]
name = "clawdesk-cli"
description = "CLI binary for ClawDesk — the multi-channel AI agent gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "clawdesk"
path = "src/main.rs"

[features]
default = ["tui", "browser", "mcp", "rag", "local-models"]
tui = ["dep:clawdesk-tui"]
browser = ["dep:clawdesk-browser"]
mcp = ["dep:clawdesk-mcp"]
rag = ["dep:clawdesk-rag"]
local-models = ["dep:clawdesk-local-models"]
# Build all optional features
full = ["tui", "browser", "mcp", "rag", "local-models"]
# Minimal build: core agent loop + providers only
minimal = []

[dependencies]
clawdesk-types = { workspace = true }
clawdesk-storage = { workspace = true }
clawdesk-domain = { workspace = true }
clawdesk-sochdb = { workspace = true }
clawdesk-channel = { workspace = true }
clawdesk-channels = { workspace = true }
clawdesk-providers = { workspace = true }
clawdesk-agents = { workspace = true }
clawdesk-gateway = { workspace = true }
clawdesk-plugin = { workspace = true }
clawdesk-skills = { workspace = true }
clawdesk-cron = { workspace = true }
clawdesk-daemon = { workspace = true }
clawdesk-runtime = { workspace = true }
clawdesk-bus = { workspace = true }
clawdesk-tui = { workspace = true, optional = true }
clawdesk-browser = { workspace = true, optional = true }
clawdesk-mcp = { workspace = true, optional = true }
clawdesk-rag = { workspace = true, optional = true }
clawdesk-local-models = { workspace = true, optional = true }
async-trait = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
