[package]
name = "clawdesk-conscious"
description = "Conscious Execution Gateway — graduated awareness for agent tool control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clawdesk-types = { workspace = true }
clawdesk-consensus = { workspace = true }
clawdesk-metacognition = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
rustc-hash = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
