[package]
name = "clawdesk-consensus"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Byzantine fault-tolerant consensus for multi-agent decisions"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
