[package]
name = "clawdesk-core"
version = "0.1.0"
edition = "2021"
description = "Transport-agnostic service kernel — shared by Tauri, CLI, Gateway, and TMUX"

[dependencies]
clawdesk-types = { path = "../clawdesk-types" }
clawdesk-storage = { path = "../clawdesk-storage" }
clawdesk-domain = { path = "../clawdesk-domain" }
clawdesk-sochdb = { path = "../clawdesk-sochdb" }
clawdesk-agents = { path = "../clawdesk-agents" }
clawdesk-providers = { path = "../clawdesk-providers" }
clawdesk-skills = { path = "../clawdesk-skills" }
clawdesk-security = { path = "../clawdesk-security" }
clawdesk-memory = { path = "../clawdesk-memory" }
clawdesk-gateway = { path = "../clawdesk-gateway" }
clawdesk-sandbox = { path = "../clawdesk-sandbox" }
clawdesk-bus = { path = "../clawdesk-bus" }
clawdesk-mcp = { path = "../clawdesk-mcp" }
clawdesk-runtime = { path = "../clawdesk-runtime" }

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
async-trait = "0.1"
