[package]
name = "clawdesk-cron"
description = "Cron & scheduling — scheduled agent runs, overlap prevention, delivery pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clawdesk-types = { workspace = true }
clawdesk-agents = { workspace = true }
clawdesk-storage = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
rand = { workspace = true }
