[package]
name = "clawdesk-curiosity"
description = "Curiosity engine — proactive exploration, information gap detection, and idle-time autonomous scanning for ClawDesk agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
