[package]
name = "clawdesk-daemon"
description = "Platform-native daemon lifecycle manager for ClawDesk gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "io-util", "signal", "net", "time"] }
tokio-util = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
