[package]
name = "clawdesk-discovery"
description = "Network discovery — mDNS/DNS-SD service advertisement and SPAKE2 pairing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clawdesk-types = { workspace = true }
clawdesk-acp = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tracing = { workspace = true }
