[package]
name = "clawdesk-domain"
description = "Pure business logic for ClawDesk — routing, fallback FSM, compaction, auth ring (no I/O)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clawdesk-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
